# cbrew

./: .gitignore  CLAUDE.md  CODE_REVIEW_CHECKLIST.md  GITHUB_SETTINGS.md  README.md  main.py  pr_policy.md  pull_request_template.md  pyproject.toml
.github/workflows/: auto-assign.yml  ci.yml
tests/: __init__.py  test_main.py
